{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 1681,
  "lineage": "de500f46-fbe7-e666-87a0-1d02aab2c30a",
  "resources": [
    {
      "module": "module.linuxservers",
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/7409015c-1c36-4389-ab17-588c61f855ff/resourceGroups/rg-devops/providers/Microsoft.Network/publicIPAddresses/mylinuxvm-pip-0",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.157.143.41",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "mylinuxvm-pip-0",
            "resource_group_name": "rg-devops",
            "sku": "Basic",
            "tags": {
              "costcenter": "it",
              "environment": "dev"
            }
          }
        }
      ]
    },
    {
      "module": "module.linuxservers",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": true,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/7409015c-1c36-4389-ab17-588c61f855ff/resourceGroups/rg-devops/providers/Microsoft.Network/networkInterfaces/mylinuxvm-nic-0",
            "internal_domain_name_suffix": "zbqjnnu1ksledkmy2tx1nr1jaf.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "mylinuxvm-ip-0",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/7409015c-1c36-4389-ab17-588c61f855ff/resourceGroups/rg-devops/providers/Microsoft.Network/publicIPAddresses/mylinuxvm-pip-0",
                "subnet_id": "/subscriptions/7409015c-1c36-4389-ab17-588c61f855ff/resourceGroups/rg-shared-westeurope-01/providers/Microsoft.Network/virtualNetworks/vnet-shared-hub-westeurope-001/subnets/snet-management"
              }
            ],
            "location": "westeurope",
            "name": "mylinuxvm-nic-0",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "rg-devops",
            "tags": {
              "costcenter": "it",
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.example",
            "module.linuxservers.azurerm_public_ip.vm",
            "module.linuxservers.data.azurerm_resource_group.vm",
            "module.vnet.azurerm_subnet.subnet_count",
            "module.vnet.azurerm_subnet.subnet_for_each",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.linuxservers",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7409015c-1c36-4389-ab17-588c61f855ff/resourceGroups/rg-devops/providers/Microsoft.Network/networkInterfaces/mylinuxvm-nic-0|/subscriptions/7409015c-1c36-4389-ab17-588c61f855ff/resourceGroups/rg-devops/providers/Microsoft.Network/networkSecurityGroups/mylinuxvm-nsg",
            "network_interface_id": "/subscriptions/7409015c-1c36-4389-ab17-588c61f855ff/resourceGroups/rg-devops/providers/Microsoft.Network/networkInterfaces/mylinuxvm-nic-0",
            "network_security_group_id": "/subscriptions/7409015c-1c36-4389-ab17-588c61f855ff/resourceGroups/rg-devops/providers/Microsoft.Network/networkSecurityGroups/mylinuxvm-nsg"
          },
          "dependencies": [
            "azurerm_resource_group.example",
            "module.linuxservers.azurerm_network_interface.vm",
            "module.linuxservers.azurerm_network_security_group.vm",
            "module.linuxservers.azurerm_public_ip.vm",
            "module.linuxservers.data.azurerm_resource_group.vm",
            "module.vnet.azurerm_subnet.subnet_count",
            "module.vnet.azurerm_subnet.subnet_for_each",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.linuxservers",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7409015c-1c36-4389-ab17-588c61f855ff/resourceGroups/rg-devops/providers/Microsoft.Network/networkSecurityGroups/mylinuxvm-nsg",
            "location": "westeurope",
            "name": "mylinuxvm-nsg",
            "resource_group_name": "rg-devops",
            "security_rule": [],
            "tags": {
              "costcenter": "it",
              "environment": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.example",
            "module.linuxservers.data.azurerm_resource_group.vm"
          ]
        }
      ]
    },
    {
      "module": "module.linuxservers",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "Allow remote protocol in from all locations",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/7409015c-1c36-4389-ab17-588c61f855ff/resourceGroups/rg-devops/providers/Microsoft.Network/networkSecurityGroups/mylinuxvm-nsg/securityRules/allow_remote_22_in_all",
            "name": "allow_remote_22_in_all",
            "network_security_group_name": "mylinuxvm-nsg",
            "priority": 101,
            "protocol": "Tcp",
            "resource_group_name": "rg-devops",
            "source_address_prefix": "",
            "source_address_prefixes": [
              "0.0.0.0/0"
            ],
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.example",
            "module.linuxservers.azurerm_network_security_group.vm",
            "module.linuxservers.data.azurerm_resource_group.vm"
          ]
        }
      ]
    },
    {
      "module": "module.linuxservers",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/7409015c-1c36-4389-ab17-588c61f855ff/resourceGroups/rg-devops/providers/Microsoft.Network/publicIPAddresses/mylinuxvm-pip-0",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "mylinuxvm-pip-0",
            "resource_group_name": "rg-devops",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "costcenter": "it",
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.example",
            "module.linuxservers.data.azurerm_resource_group.vm"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vmscaleset",
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "snet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/7409015c-1c36-4389-ab17-588c61f855ff/resourceGroups/rg-shared-westeurope-01/providers/Microsoft.Network/virtualNetworks/vnet-shared-hub-westeurope-001/subnets/snet-management",
            "name": "snet-management",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-shared-westeurope-01",
            "virtual_network_name": "vnet-shared-hub-westeurope-001"
          }
        }
      ]
    },
    {
      "module": "module.vmscaleset",
      "mode": "data",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "guid": "b69660c8-549b-4196-a998-e4efb6c76905",
            "id": "/subscriptions/7409015c-1c36-4389-ab17-588c61f855ff/resourceGroups/rg-shared-westeurope-01/providers/Microsoft.Network/virtualNetworks/vnet-shared-hub-westeurope-001",
            "location": "westeurope",
            "name": "vnet-shared-hub-westeurope-001",
            "resource_group_name": "rg-shared-westeurope-01",
            "subnets": [
              "snet-management"
            ],
            "tags": {
              "ENV": "test"
            }
          }
        }
      ]
    },
    {
      "module": "module.vmscaleset",
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "vmsslb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/7409015c-1c36-4389-ab17-588c61f855ff/resourceGroups/rg-shared-westeurope-01/providers/Microsoft.Network/loadBalancers/lbext-testvmss-westeurope/frontendIPConfigurations/lbext-frontend-testvmss",
                "name": "lbext-frontend-testvmss",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/7409015c-1c36-4389-ab17-588c61f855ff/resourceGroups/rg-shared-westeurope-01/providers/Microsoft.Network/publicIPAddresses/pip-vm-testvmss-westeurope-01"
              }
            ],
            "id": "/subscriptions/7409015c-1c36-4389-ab17-588c61f855ff/resourceGroups/rg-shared-westeurope-01/providers/Microsoft.Network/loadBalancers/lbext-testvmss-westeurope",
            "location": "westeurope",
            "name": "lbext-testvmss-westeurope",
            "resource_group_name": "rg-shared-westeurope-01",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "Email": "vmathpal1@gmail.com",
              "Name": "Vibhor Mathpal",
              "ProjectName": "Sapient-Assessment",
              "resourcename": "lbext-testvmss-westeurope"
            }
          },
          "dependencies": [
            "azurerm_resource_group.example",
            "module.linuxservers.azurerm_availability_set.vm",
            "module.linuxservers.azurerm_network_interface.vm",
            "module.linuxservers.azurerm_network_interface_security_group_association.test",
            "module.linuxservers.azurerm_network_security_group.vm",
            "module.linuxservers.azurerm_network_security_rule.vm",
            "module.linuxservers.azurerm_public_ip.vm",
            "module.linuxservers.azurerm_storage_account.vm_sa",
            "module.linuxservers.azurerm_virtual_machine.vm_linux",
            "module.linuxservers.azurerm_virtual_machine.vm_windows",
            "module.linuxservers.azurerm_virtual_machine_extension.extension",
            "module.linuxservers.data.azurerm_public_ip.vm",
            "module.linuxservers.data.azurerm_resource_group.vm",
            "module.linuxservers.random_id.vm_sa",
            "module.vmscaleset.azurerm_public_ip.pip",
            "module.vmscaleset.data.azurerm_resource_group.rg",
            "module.vmscaleset.data.azurerm_subnet.snet",
            "module.vmscaleset.data.azurerm_virtual_network.vnet",
            "module.vnet.azurerm_subnet.subnet_count",
            "module.vnet.azurerm_subnet.subnet_for_each",
            "module.vnet.azurerm_subnet_network_security_group_association.vnet",
            "module.vnet.azurerm_subnet_route_table_association.vnet",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vmscaleset",
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "bepool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7409015c-1c36-4389-ab17-588c61f855ff/resourceGroups/rg-shared-westeurope-01/providers/Microsoft.Network/loadBalancers/lbext-testvmss-westeurope/backendAddressPools/lbe-backend-pool-testvmss",
            "loadbalancer_id": "/subscriptions/7409015c-1c36-4389-ab17-588c61f855ff/resourceGroups/rg-shared-westeurope-01/providers/Microsoft.Network/loadBalancers/lbext-testvmss-westeurope",
            "name": "lbe-backend-pool-testvmss"
          },
          "dependencies": [
            "azurerm_resource_group.example",
            "module.linuxservers.azurerm_availability_set.vm",
            "module.linuxservers.azurerm_network_interface.vm",
            "module.linuxservers.azurerm_network_interface_security_group_association.test",
            "module.linuxservers.azurerm_network_security_group.vm",
            "module.linuxservers.azurerm_network_security_rule.vm",
            "module.linuxservers.azurerm_public_ip.vm",
            "module.linuxservers.azurerm_storage_account.vm_sa",
            "module.linuxservers.azurerm_virtual_machine.vm_linux",
            "module.linuxservers.azurerm_virtual_machine.vm_windows",
            "module.linuxservers.azurerm_virtual_machine_extension.extension",
            "module.linuxservers.data.azurerm_public_ip.vm",
            "module.linuxservers.data.azurerm_resource_group.vm",
            "module.linuxservers.random_id.vm_sa",
            "module.vmscaleset.azurerm_lb.vmsslb",
            "module.vmscaleset.azurerm_public_ip.pip",
            "module.vmscaleset.data.azurerm_resource_group.rg",
            "module.vmscaleset.data.azurerm_subnet.snet",
            "module.vmscaleset.data.azurerm_virtual_network.vnet",
            "module.vnet.azurerm_subnet.subnet_count",
            "module.vnet.azurerm_subnet.subnet_for_each",
            "module.vnet.azurerm_subnet_network_security_group_association.vnet",
            "module.vnet.azurerm_subnet_route_table_association.vnet",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vmscaleset",
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "lbp",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7409015c-1c36-4389-ab17-588c61f855ff/resourceGroups/rg-shared-westeurope-01/providers/Microsoft.Network/loadBalancers/lbext-testvmss-westeurope/probes/lb-probe-port-80-testvmss",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/7409015c-1c36-4389-ab17-588c61f855ff/resourceGroups/rg-shared-westeurope-01/providers/Microsoft.Network/loadBalancers/lbext-testvmss-westeurope",
            "name": "lb-probe-port-80-testvmss",
            "number_of_probes": 2,
            "port": 80,
            "probe_threshold": 1,
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_resource_group.example",
            "module.linuxservers.azurerm_availability_set.vm",
            "module.linuxservers.azurerm_network_interface.vm",
            "module.linuxservers.azurerm_network_interface_security_group_association.test",
            "module.linuxservers.azurerm_network_security_group.vm",
            "module.linuxservers.azurerm_network_security_rule.vm",
            "module.linuxservers.azurerm_public_ip.vm",
            "module.linuxservers.azurerm_storage_account.vm_sa",
            "module.linuxservers.azurerm_virtual_machine.vm_linux",
            "module.linuxservers.azurerm_virtual_machine.vm_windows",
            "module.linuxservers.azurerm_virtual_machine_extension.extension",
            "module.linuxservers.data.azurerm_public_ip.vm",
            "module.linuxservers.data.azurerm_resource_group.vm",
            "module.linuxservers.random_id.vm_sa",
            "module.vmscaleset.azurerm_lb.vmsslb",
            "module.vmscaleset.azurerm_public_ip.pip",
            "module.vmscaleset.data.azurerm_resource_group.rg",
            "module.vmscaleset.data.azurerm_subnet.snet",
            "module.vmscaleset.data.azurerm_virtual_network.vnet",
            "module.vnet.azurerm_subnet.subnet_count",
            "module.vnet.azurerm_subnet.subnet_for_each",
            "module.vnet.azurerm_subnet_network_security_group_association.vnet",
            "module.vnet.azurerm_subnet_route_table_association.vnet",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vmscaleset",
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "lbrule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/7409015c-1c36-4389-ab17-588c61f855ff/resourceGroups/rg-shared-westeurope-01/providers/Microsoft.Network/loadBalancers/lbext-testvmss-westeurope/backendAddressPools/lbe-backend-pool-testvmss"
            ],
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/7409015c-1c36-4389-ab17-588c61f855ff/resourceGroups/rg-shared-westeurope-01/providers/Microsoft.Network/loadBalancers/lbext-testvmss-westeurope/frontendIPConfigurations/lbext-frontend-testvmss",
            "frontend_ip_configuration_name": "lbext-frontend-testvmss",
            "frontend_port": 80,
            "id": "/subscriptions/7409015c-1c36-4389-ab17-588c61f855ff/resourceGroups/rg-shared-westeurope-01/providers/Microsoft.Network/loadBalancers/lbext-testvmss-westeurope/loadBalancingRules/testvmss-01-rule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/7409015c-1c36-4389-ab17-588c61f855ff/resourceGroups/rg-shared-westeurope-01/providers/Microsoft.Network/loadBalancers/lbext-testvmss-westeurope",
            "name": "testvmss-01-rule",
            "probe_id": "/subscriptions/7409015c-1c36-4389-ab17-588c61f855ff/resourceGroups/rg-shared-westeurope-01/providers/Microsoft.Network/loadBalancers/lbext-testvmss-westeurope/probes/lb-probe-port-80-testvmss",
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_resource_group.example",
            "module.linuxservers.azurerm_availability_set.vm",
            "module.linuxservers.azurerm_network_interface.vm",
            "module.linuxservers.azurerm_network_interface_security_group_association.test",
            "module.linuxservers.azurerm_network_security_group.vm",
            "module.linuxservers.azurerm_network_security_rule.vm",
            "module.linuxservers.azurerm_public_ip.vm",
            "module.linuxservers.azurerm_storage_account.vm_sa",
            "module.linuxservers.azurerm_virtual_machine.vm_linux",
            "module.linuxservers.azurerm_virtual_machine.vm_windows",
            "module.linuxservers.azurerm_virtual_machine_extension.extension",
            "module.linuxservers.data.azurerm_public_ip.vm",
            "module.linuxservers.data.azurerm_resource_group.vm",
            "module.linuxservers.random_id.vm_sa",
            "module.vmscaleset.azurerm_lb.vmsslb",
            "module.vmscaleset.azurerm_lb_backend_address_pool.bepool",
            "module.vmscaleset.azurerm_lb_probe.lbp",
            "module.vmscaleset.azurerm_public_ip.pip",
            "module.vmscaleset.data.azurerm_resource_group.rg",
            "module.vmscaleset.data.azurerm_subnet.snet",
            "module.vmscaleset.data.azurerm_virtual_network.vnet",
            "module.vnet.azurerm_subnet.subnet_count",
            "module.vnet.azurerm_subnet.subnet_for_each",
            "module.vnet.azurerm_subnet_network_security_group_association.vnet",
            "module.vnet.azurerm_subnet_route_table_association.vnet",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/7409015c-1c36-4389-ab17-588c61f855ff/resourceGroups/rg-shared-westeurope-01/providers/Microsoft.Network/loadBalancers/lbext-testvmss-westeurope/backendAddressPools/lbe-backend-pool-testvmss"
            ],
            "backend_port": 443,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/7409015c-1c36-4389-ab17-588c61f855ff/resourceGroups/rg-shared-westeurope-01/providers/Microsoft.Network/loadBalancers/lbext-testvmss-westeurope/frontendIPConfigurations/lbext-frontend-testvmss",
            "frontend_ip_configuration_name": "lbext-frontend-testvmss",
            "frontend_port": 443,
            "id": "/subscriptions/7409015c-1c36-4389-ab17-588c61f855ff/resourceGroups/rg-shared-westeurope-01/providers/Microsoft.Network/loadBalancers/lbext-testvmss-westeurope/loadBalancingRules/testvmss-02-rule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/7409015c-1c36-4389-ab17-588c61f855ff/resourceGroups/rg-shared-westeurope-01/providers/Microsoft.Network/loadBalancers/lbext-testvmss-westeurope",
            "name": "testvmss-02-rule",
            "probe_id": "/subscriptions/7409015c-1c36-4389-ab17-588c61f855ff/resourceGroups/rg-shared-westeurope-01/providers/Microsoft.Network/loadBalancers/lbext-testvmss-westeurope/probes/lb-probe-port-80-testvmss",
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_resource_group.example",
            "module.linuxservers.azurerm_availability_set.vm",
            "module.linuxservers.azurerm_network_interface.vm",
            "module.linuxservers.azurerm_network_interface_security_group_association.test",
            "module.linuxservers.azurerm_network_security_group.vm",
            "module.linuxservers.azurerm_network_security_rule.vm",
            "module.linuxservers.azurerm_public_ip.vm",
            "module.linuxservers.azurerm_storage_account.vm_sa",
            "module.linuxservers.azurerm_virtual_machine.vm_linux",
            "module.linuxservers.azurerm_virtual_machine.vm_windows",
            "module.linuxservers.azurerm_virtual_machine_extension.extension",
            "module.linuxservers.data.azurerm_public_ip.vm",
            "module.linuxservers.data.azurerm_resource_group.vm",
            "module.linuxservers.random_id.vm_sa",
            "module.vmscaleset.azurerm_lb.vmsslb",
            "module.vmscaleset.azurerm_lb_backend_address_pool.bepool",
            "module.vmscaleset.azurerm_lb_probe.lbp",
            "module.vmscaleset.azurerm_public_ip.pip",
            "module.vmscaleset.data.azurerm_resource_group.rg",
            "module.vmscaleset.data.azurerm_subnet.snet",
            "module.vmscaleset.data.azurerm_virtual_network.vnet",
            "module.vnet.azurerm_subnet.subnet_count",
            "module.vnet.azurerm_subnet.subnet_for_each",
            "module.vnet.azurerm_subnet_network_security_group_association.vnet",
            "module.vnet.azurerm_subnet_route_table_association.vnet",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vmscaleset",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7409015c-1c36-4389-ab17-588c61f855ff/resourceGroups/rg-shared-westeurope-01/providers/Microsoft.Network/networkSecurityGroups/nsg_testvmss_westeurope_in",
            "location": "westeurope",
            "name": "nsg_testvmss_westeurope_in",
            "resource_group_name": "rg-shared-westeurope-01",
            "security_rule": [],
            "tags": {
              "Email": "vmathpal1@gmail.com",
              "Name": "Vibhor Mathpal",
              "ProjectName": "Sapient-Assessment",
              "resourcename": "nsg_testvmss_westeurope_in"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.example",
            "module.linuxservers.azurerm_availability_set.vm",
            "module.linuxservers.azurerm_network_interface.vm",
            "module.linuxservers.azurerm_network_interface_security_group_association.test",
            "module.linuxservers.azurerm_network_security_group.vm",
            "module.linuxservers.azurerm_network_security_rule.vm",
            "module.linuxservers.azurerm_public_ip.vm",
            "module.linuxservers.azurerm_storage_account.vm_sa",
            "module.linuxservers.azurerm_virtual_machine.vm_linux",
            "module.linuxservers.azurerm_virtual_machine.vm_windows",
            "module.linuxservers.azurerm_virtual_machine_extension.extension",
            "module.linuxservers.data.azurerm_public_ip.vm",
            "module.linuxservers.data.azurerm_resource_group.vm",
            "module.linuxservers.random_id.vm_sa",
            "module.vmscaleset.data.azurerm_resource_group.rg",
            "module.vnet.azurerm_subnet.subnet_count",
            "module.vnet.azurerm_subnet.subnet_for_each",
            "module.vnet.azurerm_subnet_network_security_group_association.vnet",
            "module.vnet.azurerm_subnet_route_table_association.vnet",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vmscaleset",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsg_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "http",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "Inbound_Port_80",
            "destination_address_prefix": "10.0.1.0/24",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/7409015c-1c36-4389-ab17-588c61f855ff/resourceGroups/rg-shared-westeurope-01/providers/Microsoft.Network/networkSecurityGroups/nsg_testvmss_westeurope_in/securityRules/http",
            "name": "http",
            "network_security_group_name": "nsg_testvmss_westeurope_in",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "rg-shared-westeurope-01",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.example",
            "module.linuxservers.azurerm_availability_set.vm",
            "module.linuxservers.azurerm_network_interface.vm",
            "module.linuxservers.azurerm_network_interface_security_group_association.test",
            "module.linuxservers.azurerm_network_security_group.vm",
            "module.linuxservers.azurerm_network_security_rule.vm",
            "module.linuxservers.azurerm_public_ip.vm",
            "module.linuxservers.azurerm_storage_account.vm_sa",
            "module.linuxservers.azurerm_virtual_machine.vm_linux",
            "module.linuxservers.azurerm_virtual_machine.vm_windows",
            "module.linuxservers.azurerm_virtual_machine_extension.extension",
            "module.linuxservers.data.azurerm_public_ip.vm",
            "module.linuxservers.data.azurerm_resource_group.vm",
            "module.linuxservers.random_id.vm_sa",
            "module.vmscaleset.azurerm_network_security_group.nsg",
            "module.vmscaleset.data.azurerm_resource_group.rg",
            "module.vmscaleset.data.azurerm_subnet.snet",
            "module.vmscaleset.data.azurerm_virtual_network.vnet",
            "module.vnet.azurerm_subnet.subnet_count",
            "module.vnet.azurerm_subnet.subnet_for_each",
            "module.vnet.azurerm_subnet_network_security_group_association.vnet",
            "module.vnet.azurerm_subnet_route_table_association.vnet",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "https",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "Inbound_Port_443",
            "destination_address_prefix": "10.0.1.0/24",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/7409015c-1c36-4389-ab17-588c61f855ff/resourceGroups/rg-shared-westeurope-01/providers/Microsoft.Network/networkSecurityGroups/nsg_testvmss_westeurope_in/securityRules/https",
            "name": "https",
            "network_security_group_name": "nsg_testvmss_westeurope_in",
            "priority": 200,
            "protocol": "Tcp",
            "resource_group_name": "rg-shared-westeurope-01",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.example",
            "module.linuxservers.azurerm_availability_set.vm",
            "module.linuxservers.azurerm_network_interface.vm",
            "module.linuxservers.azurerm_network_interface_security_group_association.test",
            "module.linuxservers.azurerm_network_security_group.vm",
            "module.linuxservers.azurerm_network_security_rule.vm",
            "module.linuxservers.azurerm_public_ip.vm",
            "module.linuxservers.azurerm_storage_account.vm_sa",
            "module.linuxservers.azurerm_virtual_machine.vm_linux",
            "module.linuxservers.azurerm_virtual_machine.vm_windows",
            "module.linuxservers.azurerm_virtual_machine_extension.extension",
            "module.linuxservers.data.azurerm_public_ip.vm",
            "module.linuxservers.data.azurerm_resource_group.vm",
            "module.linuxservers.random_id.vm_sa",
            "module.vmscaleset.azurerm_network_security_group.nsg",
            "module.vmscaleset.data.azurerm_resource_group.rg",
            "module.vmscaleset.data.azurerm_subnet.snet",
            "module.vmscaleset.data.azurerm_virtual_network.vnet",
            "module.vnet.azurerm_subnet.subnet_count",
            "module.vnet.azurerm_subnet.subnet_for_each",
            "module.vnet.azurerm_subnet_network_security_group_association.vnet",
            "module.vnet.azurerm_subnet_route_table_association.vnet",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "linuxaccess",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "Inbound_Port_22",
            "destination_address_prefix": "10.0.1.0/24",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/7409015c-1c36-4389-ab17-588c61f855ff/resourceGroups/rg-shared-westeurope-01/providers/Microsoft.Network/networkSecurityGroups/nsg_testvmss_westeurope_in/securityRules/linuxaccess",
            "name": "linuxaccess",
            "network_security_group_name": "nsg_testvmss_westeurope_in",
            "priority": 300,
            "protocol": "Tcp",
            "resource_group_name": "rg-shared-westeurope-01",
            "source_address_prefix": "210.16.95.159/32",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.example",
            "module.linuxservers.azurerm_availability_set.vm",
            "module.linuxservers.azurerm_network_interface.vm",
            "module.linuxservers.azurerm_network_interface_security_group_association.test",
            "module.linuxservers.azurerm_network_security_group.vm",
            "module.linuxservers.azurerm_network_security_rule.vm",
            "module.linuxservers.azurerm_public_ip.vm",
            "module.linuxservers.azurerm_storage_account.vm_sa",
            "module.linuxservers.azurerm_virtual_machine.vm_linux",
            "module.linuxservers.azurerm_virtual_machine.vm_windows",
            "module.linuxservers.azurerm_virtual_machine_extension.extension",
            "module.linuxservers.data.azurerm_public_ip.vm",
            "module.linuxservers.data.azurerm_resource_group.vm",
            "module.linuxservers.random_id.vm_sa",
            "module.vmscaleset.azurerm_network_security_group.nsg",
            "module.vmscaleset.data.azurerm_resource_group.rg",
            "module.vmscaleset.data.azurerm_subnet.snet",
            "module.vmscaleset.data.azurerm_virtual_network.vnet",
            "module.vnet.azurerm_subnet.subnet_count",
            "module.vnet.azurerm_subnet.subnet_for_each",
            "module.vnet.azurerm_subnet_network_security_group_association.vnet",
            "module.vnet.azurerm_subnet_route_table_association.vnet",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vmscaleset",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/7409015c-1c36-4389-ab17-588c61f855ff/resourceGroups/rg-shared-westeurope-01/providers/Microsoft.Network/publicIPAddresses/pip-vm-testvmss-westeurope-01",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.157.168.107",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "pip-vm-testvmss-westeurope-01",
            "resource_group_name": "rg-shared-westeurope-01",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "Email": "vmathpal1@gmail.com",
              "Name": "Vibhor Mathpal",
              "ProjectName": "Sapient-Assessment",
              "resourcename": "pip-vm-testvmss-westeurope-01"
            }
          },
          "dependencies": [
            "azurerm_resource_group.example",
            "module.linuxservers.azurerm_availability_set.vm",
            "module.linuxservers.azurerm_network_interface.vm",
            "module.linuxservers.azurerm_network_interface_security_group_association.test",
            "module.linuxservers.azurerm_network_security_group.vm",
            "module.linuxservers.azurerm_network_security_rule.vm",
            "module.linuxservers.azurerm_public_ip.vm",
            "module.linuxservers.azurerm_storage_account.vm_sa",
            "module.linuxservers.azurerm_virtual_machine.vm_linux",
            "module.linuxservers.azurerm_virtual_machine.vm_windows",
            "module.linuxservers.azurerm_virtual_machine_extension.extension",
            "module.linuxservers.data.azurerm_public_ip.vm",
            "module.linuxservers.data.azurerm_resource_group.vm",
            "module.linuxservers.random_id.vm_sa",
            "module.vmscaleset.data.azurerm_resource_group.rg",
            "module.vnet.azurerm_subnet.subnet_count",
            "module.vnet.azurerm_subnet.subnet_for_each",
            "module.vnet.azurerm_subnet_network_security_group_association.vnet",
            "module.vnet.azurerm_subnet_route_table_association.vnet",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_count",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/7409015c-1c36-4389-ab17-588c61f855ff/resourceGroups/rg-shared-westeurope-01/providers/Microsoft.Network/virtualNetworks/vnet-shared-hub-westeurope-001/subnets/snet-management",
            "name": "snet-management",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-shared-westeurope-01",
            "virtual_network_name": "vnet-shared-hub-westeurope-001"
          },
          "dependencies": [
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "b69660c8-549b-4196-a998-e4efb6c76905",
            "id": "/subscriptions/7409015c-1c36-4389-ab17-588c61f855ff/resourceGroups/rg-shared-westeurope-01/providers/Microsoft.Network/virtualNetworks/vnet-shared-hub-westeurope-001",
            "location": "westeurope",
            "name": "vnet-shared-hub-westeurope-001",
            "resource_group_name": "rg-shared-westeurope-01",
            "tags": {
              "ENV": "test"
            }
          }
        }
      ]
    }
  ]
}